fixed center alignment of google image result #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,7 @@ label {
 
 .answer-image {
   margin-top: 2rem;
+  text-align: center;
 }
 
 [data-view='settings'] form {
